# material-quality-search-agent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  pyproject.toml  render.yaml
data/: issues.db  sample_data.json
data/chroma/: chroma.sqlite3
scripts/: seed_db.py  start_api.sh  start_ui.sh
src/material_quality_agent/: config.py
src/material_quality_agent/api/: main.py  schemas.py
src/material_quality_agent/db/: issue_db.py  seed_data.py
src/material_quality_agent/graph/: edges.py  nodes.py  pipeline.py  state.py
src/material_quality_agent/search/: ranker.py
src/material_quality_agent/tools/: entity_extractor.py  entity_selector.py  filter_builder.py
src/material_quality_agent/vector/: embedder.py  store.py
tests/: conftest.py  test_api.py  test_entity_extractor.py  test_entity_selector.py  test_pipeline.py
ui/: app.py
